[package]
name = "cyrok"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"
[dependencies]
flexi_logger = { version = "0.22", features = ["async", "specfile", "compress"] }
log = "0.4"
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-serde-json = "0.2"
tokio-serde = { version = "0.8", features = ["json"] }
futures = { version = "0.3", default-features = false }
tokio-stream = "0.1.9"
tokio = { version = "1.19.2", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
rustls-pemfile = "1.0.0"
tokio-rustls = "0.23.4"
bytes = "1"
lazy_static = "1.4.0"
once_cell = "1.13.0"
hyper = {version = "0.14", features = ["server", "http2", "http1"]}
httparse = "1.7.1"
http = "0.2"

